修改聊天功能

--- a/app/src/main/res/layout/fragment_chat.xml
+++ b/app/src/main/res/layout/fragment_chat.xml
@@ -27,9 +27,8 @@
             android:layout_weight="1"
             android:ems="10"
             android:inputType="textPersonName"
-            android:text="@string/chat"
+            android:hint="@string/chat"
             android:autofillHints="" />
-
         <Button
             android:id="@+id/button_send"
             android:layout_width="wrap_content"
